# guide_robot

./: README.md  makeLED  데모 시나리오 설계.xlsx
3x3 맵파일/: map_33.pgm  map_33.yaml  threebythree.launch  threebythree.world  turtlebot3_navigation.launch
new gazebo map(2m*3m)/: .gitkeep  README.txt  map_wall65_hascenterwall.launch  map_wall65_hascenterwall.world  map_wall65_nocenterwall.launch  map_wall65_nocenterwall.world  map_wall75_nocenterwall.launch  map_wall75_nocenterwall.world  map_wall75_nocenterwall.yaml
new gazebo map(3m*3m)/: threebythree.launch  threebythree.yaml
robot/: README.md  ROS_test_code.sh  install_ros.sh
robot/ROS 강좌 정리/김동운/: ROS 3주차.pptx  ROS_1~5_김동운.pptx
robot/ROS 강좌 정리/윤현승/: 11강_SLAM정리_윤현승.odt  ~$강_SLAM정리_윤현승.odt  윤현승 ROS 1~5강 정리.docx
robot/ROS 강좌 정리/최연균/: ROS 강의 2주차_최연균.docx  ROS강의 2강_최연균.txt
slam/: README.md
slam/turtlebot3/turtlebot3_slam/launch/: turtlebot3_gmapping.launch
slam/turtlebot3_simulations/turtlebot3_gazebo/launch/: mart.launch
slam/turtlebot3_simulations/turtlebot3_gazebo/worlds/: mart.world
sound/: README.md  my_demo.py  pushtotalk_fix.py  sub_msg.py
sound/input_msg/: CMakeLists.txt  package.xml
sound/input_msg/src/: input_talker.cpp
